<resources>
    <string name="app_name">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="forget_password">Forget Password</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="password">Password</string>
    <string name="google_icon">Google icon</string>
    <string name="facebook_icon">Facebook icon</string>
    <string name="twitter_icon">Twitter icon</string>
    <string name="login">LOGIN</string>
</resources>